custom.css
/*
 * Antionio — A Vivaldi mod, almost Safari, but its not.
 * https://github.com/otpidusprime/antonio
 * Version: 1.0
 *
 * Author: Sudipto (@otpidusprime)
 */

#browser:not(.fullscreen).mac #header {
    min-height: 34px;
}

#browser:not(.fullscreen) #main {
    overflow: initial;
    position: absolute;
    left: 0;
    right: 0;
    top: 64px;
    height: calc(100% - 64px);
}

#browser:not(.fullscreen).is-settingspage #main {
    top: 34px;
    height: calc( 100% - 34px );
}

.vivaldi-settings .settings-sidebar .button-category.category-selected {
    background-color: var(--colorHighlightBg);
    fill: var( --colorHighlightFg);
    color: var( --colorHighlightFg);
}

#browser:not(.fullscreen) #titlebar {
    margin-top: -3px;
}

#browser:not(.fullscreen) #titlebar .window-buttongroup {
    z-index: 1;
}

.mac#browser:not(.fullscreen).popup #titlebar, .mac#browser:not(.fullscreen).popup #header, .mac#browser:not(.fullscreen).popup .settings-header {
    height: 34px;
    line-height: 34px;
}

#browser.mac #titlebar.tabless .window-buttongroup {
    margin-top: 13px;
}

#browser:not(.fullscreen) .toolbar.toolbar-addressbar.toolbar-mainbar {
    position: absolute;
    left: 0;
    right: 0;
    top: -64px;;
    display: flex;
    justify-content: center;
}

#browser:not(.fullscreen) .SiteInfoButton.certified {
    fill: #48ff7e;
    color: #48ff7e;
}

#browser:not(.fullscreen) .addressfield {
    max-width: 600px;
}

#browser:not(.fullscreen) .addressfield .pageload {
    color: var(--colorAccentFgFaded);
}

#browser:not(.fullscreen) .UrlBar-UrlField {
    font-size: 12.2px;
}

#browser:not(.fullscreen):not(.is-settingspage) .UrlBar-UrlField::selection {
    background: var(--colorAccentFg);
    color: var(--colorAccentBg);
}

/* #browser:not(.fullscreen).theme-dark.hasfocus .UrlBar-UrlField:not(:focus) {
    color: rgba(255, 255, 255, 0.7);
}

#browser:not(.fullscreen).theme-dark.isblurred .UrlBar-UrlField {
    color: rgba(255, 255, 255, 0.45);
} */

/* .theme-dark .addressfield, .theme-dark .searchfield {
    border: 1px solid rgba(0,0,0,0.6);
    background-color: rgba(0,0,0,0.6);
} */

.extension-popup, .button-popup, .OmniDropdown {
    box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.1), 0 5px 25px rgba(0, 0, 0, 0.2);
}

.OmniDropdown {
    background: var(--colorBgAlpha);
    backdrop-filter: blur(22px);
}

#modal-bg {
    background-color: var(--colorBgAlpha);
    backdrop-filter: blur(22px);
}

/* Sets the background color to any non-selected 
 * element of the quick command menu to transparent */
 #modal-bg *:not([data-selected]) {
     background-color: rgba(0,0,0,0)!important;
 }

#browser:not(.fullscreen) #tabs-container {
    position: absolute;
    top: 34px;
    left: 0;
    right: 0;
    padding: 0;
}

#browser:not(.fullscreen) .toolbar-tabbar .newtab > button svg {
    fill: var(--colorAccentFg);
}

#browser:not(.fullscreen) .mac #tabs-container.top {
    padding-left: 0;
}

#browser:not(.fullscreen).theme-light .tab-position .tab {
    background-color: var(--colorAccentBgDark);
}

#browser:not(.fullscreen).theme-light .tab-position .tab.active {
    background-color: var(--colorAccentBgFaded);
}

#browser:not(.fullscreen) .tab-position .tab .tab-header {
    border-bottom: 1px solid var(--colorBorder);
}

#browser:not(.fullscreen) .tab-position .tab .close svg {
    fill: var(--colorAccentFg);
}

#browser:not(.fullscreen).theme-light .tab-position .tab:hover:not(.active) {
    background-color: var(--colorFgAlpha);
}

#browser:not(.fullscreen).theme-light .tab-position .tab:not(.active) .tab-header .title {
    color: var(--colorAccentFgFaded);
}

#browser:not(.fullscreen).theme-light .tab-position .tab:hover:not(.active) .tab-header .title {
    color: var(--colorAccentFg);
}

/* .theme-light .addressfield, .theme-light .searchfield {
    border: 1px solid rgba(255, 255, 255, 0.55);
    background-color: rgba(255, 255, 255, 0.4);
} */

#browser:not(.fullscreen).isblurred .tab-strip, #browser:not(.fullscreen).isblurred .toolbar-tabbar > .button-toolbar.toggle-trash {
    background: var(--colorAccentBgDark);
}

#browser:not(.fullscreen) .tab-strip, #browser:not(.fullscreen) .toolbar-tabbar > .button-toolbar.toggle-trash {
    background: var(--colorAccentBorderDark);
}

#browser:not(.fullscreen):not(.is-settingspage) .button-toolbar.toggle-trash > button svg, .button-toolbar > button img, .SiteInfoButton.secure {
    fill: var(--colorAccentFgFaded);
}

#browser:not(.fullscreen):not(.is-settingspage) #panels .button-toolbar > button svg,
#browser:not(.fullscreen):not(.is-settingspage) .find-in-page.toolbar .button-toolbar > button svg {
    fill: var(--colorFg);
}

#browser:not(.fullscreen) .tab-group-indicator {
    top: 0;
    padding: 0;
}

#browser:not(.fullscreen) .tab-indicator {
    height: 2px;
    cursor: pointer;
    border: 0;
    border-bottom: 1px solid var(--colorAccentBg);
}

#browser:not(.fullscreen) .tab-indicator.active {
    height: 3px;
    border: 0;
    border-bottom: 2px solid var(--colorAccentBg);
}

#browser:not(.fullscreen).tabs-top .tab-position .tab {
    border-radius: 0;
}

#browser:not(.fullscreen) .tab-position .tab .tab-header {
    border-bottom: 1px solid rgba(0,0,0,0.15);
}

#browser:not(.fullscreen) .color-behind-tabs-on .tab.active .tab-indicator.active {
    background-color: var(--colorAccentBgFadedMost);
}

#browser:not(.fullscreen) .color-behind-tabs-off .tab.active .tab-indicator.active {
    background-color: var(--colorAccentBgFadedMost);
}
/* ... */

